--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ p {
 
 .hero {
   padding-top: 200px;
-  margin-top: 8px;
+  margin-top: 8px; /*в макете есть отступ 8px от тонкого нижнего бордера шапки до следующей секции*/
   height: 600px;
   background-color: var(--darck-bg);
   text-align: center;
