--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
   --light-second-bg: #f5f4fa; /*наша команда*/
   --white-opacity: rgba(255, 255, 255, 0.6);
   --color-line: #ececec; /*цвет бордера*/
+  --pf-filter-gap: 30px;
+  --pf-grid-item: 3;
 }
 
 html {
@@ -208,8 +210,7 @@ p {
 
 .feature-list,
 .work-list,
-.team-list,
-.pf-list {
+.team-list {
   display: flex;
   flex-wrap: wrap;
 }
@@ -339,19 +340,20 @@ p {
   cursor: pointer;
 }
 
-.pf-list .item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+.pf-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * var(--pf-filter-gap));
+  margin-top: calc(-1 * var(--pf-filter-gap));
+}
+
+.pf-list > .item {
+  flex-basis: calc(
+    (100% - var(--pf-filter-gap) * var(--pf-grid-item)) / var(--pf-grid-item)
+  );
+  margin-left: var(--pf-filter-gap);
+  margin-top: var(--pf-filter-gap);
   background-color: var(--white-basis);
-}
-
-.pf-list .item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.pf-list .item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
 }
 
 .pf-list-text {
