--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ p {
   height: 50px;
   border-radius: 4px;
   border: transparent;
-  outline: none; /*убирает рамку при нажатии*/
+  /*outline: none; убирает рамку при нажатии*/
   color: var(--white-basis);
   font-family: Roboto;
   font-weight: 700;
@@ -384,7 +384,7 @@ p {
   background-color: var(--darck-bg);
 }
 
-.footer-navi {
+.site-footer address {
   margin-top: 20px;
 }
 
